- Updated the testimonial section to show the image of 'Darryl Dea' only on the mobile views. - Updated the font size of the paragraphs on mobile devices. - Fixed the horizontal scroll on iPhone 5 device.

--- a/revolv/static/css/screen.css
+++ b/revolv/static/css/screen.css
@@ -10326,7 +10326,7 @@ width: 580px;
         line-height: 10px;
     }
     .how-it-works-module .info-row .txt-area .txt-td p {
-        font-size: 8px;
+        font-size: 100%;
         line-height: 16px;
     }
     /* .how-it-works-module .step-row */
@@ -10451,10 +10451,10 @@ width: 580px;
         padding: 17px 30px 0 30px;
     }
     .testimonial-module .info-area p {
-        font-size: 8px;
+        font-size: 100%;
         line-height: 16px;
         letter-spacing: -0.1px;
-        width: 320px;
+        width: 90%;
         padding-bottom: 7px;
     }
     .testimonial-module .user-group {
@@ -10464,7 +10464,7 @@ width: 580px;
         font-size: 12px;
     }
     .testimonial-module .user-group .txt {
-        font-size: 8px;
+        font-size: 80%;
         padding: 0 0 12px 0;
     }
     .testimonial-module .user-group .btn-blue {
@@ -15440,5 +15440,10 @@ input[type=number]::-webkit-outer-spin-button {
 @media (max-width: 767px) {
     #desktop {
         display: none;
+    }
+}
+@media (max-width: 335px) {
+    .testimonial-module .head-row li .head-img .mobile-head {
+        width: 90vw;
     }
 }
